--- a/oblig/Itemview.CSS
+++ b/oblig/Itemview.CSS
@@ -1,5 +1,6 @@
-#Equipments-container{
-
-    border:2px dotted hotpink;
-   
+.grid-container2{
+    display: grid;
+    position: relative;
+    grid-template-rows: 1fr 1fr 1fr;
+    border: dotted hotpink;
 }
