--- a/oblig/MVC2.CSS
+++ b/oblig/MVC2.CSS
@@ -1,244 +1,53 @@
-
-
- 
- #hovedside { top:6vh;   /* dropdownbar*/
-  position: relative;
-  left: 45vw;
-height:1vh;
-}
-
-.ninjaImg{
-  display: grid;
-  position:relative;
-  top:0vh;
-  right:3.7vw;
-  
-}
-.Cost {
-  background-color: burlywood;
-  display:flex;
-  flex-wrap: wrap;
-  position: relative;
-  right:vw;
-  font-size:2vh;
-  border-bottom: 4px  solid black ;
-  
-  
-}
-.chakra
-{ display:flex;
-  flex-wrap: wrap;
-  position: relative;
-  top:0vh; 
-  
-  font-size:2vh;
-  border: 2px dotted blue;
-  justify-content: center;
-}
-.quarter1{
-  position: relative;
-   display:flex;
-   flex-wrap:wrap;
-  
-   border:1px solid black;
-   font-size:2vh;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
  }
- .NY{
-  position: relative;  /*for quarter 1 Forbidden */
-  display:flex;
-  flex-wrap:wrap;
-    top:0.1vh;
-   
-    justify-content: center;
-    font-size:2vh;
-    border:2px dotted hotpink;
-}
-
-.quarter2{
-  position: relative;
-  display:flex;
-  flex-wrap:wrap;
-  
-  font-size:2vh;
-  border:1px solid black;
-}
- .YN{ /*for quarter 2 Fixed chakra  */
-  position: relative;
-  display:flex;
-  flex-wrap:wrap;
-  top:1-.90vh;
-  right:3.7vw;
-  justify-content: center;
-  font-size:2vh;
-  border:2px dotted hotpink;
-
+body {display:grid;
  }
- .ID{
-  position: relative;
-  display: grid;
-  top:20vh;
-right:10vw;
-}
-.fixed{
-  position: relative;
-  display: grid;
-  top:20vh;
-  right:10vw;
-}
-#result {
-  color: white;
-    position:fixed;
-    display:flex;
-    flex-wrap:wrap;
-    background-color: purple;
-    width:2vw;
-    height:36vh;
-    right:61.5vw;
-    top:25vh;
-    
-   
-}
-.position{
-  display:flex;
-flex-wrap: wrap;
-position: relative;
-left:15.33vw;
-bottom:17.6vh;
-background-color: brown;
-width:5.7vw;
-height:8vh;
-
+/* page related stuff */
+/* Chrome, Safari, Edge, Opera removes arrows*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-.The-Cost{
-  position:fixed;
-  display: flex;
-  flex-wrap: wrap;
-  right:93vw;
-  top:2Vh;
+/* Firefox removes arrows */
+input[type=number] {
+  -moz-appearance: textfield;
 }
-.position {
-  display: flex;
-  flex-wrap: wrap;
-  position:fixed;
-  bottom:94vh;
-  left:30Vw;
-}
-.Seal {
-  display: flex;
-  flex-wrap: wrap;
-  position:fixed;
-  bottom:83vh;
-  left:20Vw;
-}
-.NinjaName {
-  display: flex;
-  flex-wrap: wrap;
-  position:fixed;
-  bottom:94vh;
-  left:15Vw;
-}
-.lvl{
-  display: flex;
-  flex-wrap: wrap;
-  position:fixed;
-  bottom:88vh;
-  left:15Vw;
-
-}
+/*div that draws out stuff*/
 #selectResult {
-display:flex;
-flex-wrap: wrap;
-flex-direction:column;
-width:30vw; 
-height:30vh;
-/* background-color: yellow; */
- 
-}
-
-
-#bearDiv  {
-  background-color: bisque;
-  position:fixed;
-   display:flex;
-   flex-wrap:wrap;
-   flex-direction:column;
-
-}
-
-input{
-    position:fixed;
-    display: flex;
-    flex-wrap:wrap;
-    width:40px;
-    left:10vw;
-    bottom:90vh;
-
-}
-#LVL{
-    display:flex;
-    flex-wrap: wrap;
-    border-radius:12px;
-    background-color: blueviolet;
-    left:10vw;
-}
-
-.Chakra{
-  
-    
-    flex-wrap: wrap;
-    display: flex;
-}
-
-
-.button {
-  display: flex;
-  border:1px solid blue;
-  border-style:dotted solid double dashed;
+  display:flex;
+  flex-wrap: wrap;
+  flex-direction:column; 
+  }
+  /*end off draw out div*/ 
+  .hei {/*Dropdown bar */
+    display: grid;
     position:relative;
-    background-color:white;
-    color: #000000;
-  left:-70.5vw;
-    font-size:16px;
- bottom:09vh;
+    background-color: aqua;
+  left:10vw;
+  top:2vh;
+  width:5vw;
+  height:5vh;
   }
 
 
-  .bloodline{
-    position:relative;
-    font-size:2vh;
-   border-top: 2px solid black;
-    background-color: crimson;
-    right:-1.8vw;
-     top: 30.6vh;
-    }
-  .bloodlinelvl{
-    position:relative;
-    font-size:2vh;
-    border-bottom: 2px solid black;
-     background-color: crimson;
-     right:-1.8vw;
-     top:30.6vh;
-     
-  }
-  .Blood-line{
-    position:relative;
-    font-size:2vh;
-    border: 1px solid black;
-     background-color: crimson;
-      right:-8.8vw;
-     top:25.6vh;
-     
-  }
-  .Blood-Line-LvL{
-    position:relative;
-    font-size:2vh;
-    border:1px solid black;
-     background-color: crimson;
-     right:-8.8vw;
-     top:25.6vh;
-     
+/* end off dropdownbar */
+
+
+/* end off page related stuff */
+
+/* the entire info sheet */
+.Ninjasheet1-containers {
+  display: grid;
+ position:absolute;
   }
 
+
+/*the end off the info sheet*/
 
   
