--- a/oblig/MVC2.CSS
+++ b/oblig/MVC2.CSS
@@ -3,7 +3,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  overflow: hidden;
+    overflow: hidden;  
  }
 body {display:grid;
  }
@@ -40,8 +40,8 @@ input[type=number] {
     display: grid;
     position:relative;
     background-color: aqua;
-    left:9.5vw;
-    top:5vh;
+    left:10.5vw;
+    top:2vh;
     width:49.9vw;
     height:7.5vh;
   } 
@@ -52,20 +52,24 @@ input[type=number] {
 .ninjaImg{
   display:grid;
   position: relative;
-  top:-33.33vh;
-  height:9vh;
-  width:9vw;
-  
-}
-
+  left:1.3vw;
+  bottom:36.33vh;
+  width:9.03vw;
+  height: 17.5vh;
+  border:2px solid black;
+   }
+   img {
+    width: 100%;
+    height: 100%;
+  }
 .LVLbox { 
   /* lvl box*/
   display: grid;
   position: relative;
-  bottom:71.7vh;
-  height:9vh;
+  bottom:48.1vh;
+  height:7.5vh;
   width:49.9vw;
-  left:0vw;
+  left:1vw;
   
 }
 .button{/* the lvl button*/
@@ -86,4 +90,3 @@ input[type=number] {
   border: 2px solid black;
 }
 
-  
