--- a/oblig/Stats.css
+++ b/oblig/Stats.css
@@ -1,6 +1,24 @@
 
- .qq {}
- .used 
+ .qq {display: grid;
+position: relative;
+background-color: darkslateblue;
+justify-content: center;
+right:148.8vw;
+top:4.88vh;
+width:09.4vw;
+height:3.5vh;
+border:1px solid black;
+}
+ .used{display: grid;
+  position: relative;
+  background-color: darkslateblue;
+  justify-content: center;
+  right:148.8vw;
+  top:4.88vh;
+  width:09.4vw;
+  height:3.5vh;
+  border:1px solid black;
+}
 /*all stat container*/
 
 /*all primary stats*/
@@ -9,15 +27,18 @@
     position: relative;
 }
 .The-Stats{
+  
     border:1px solid black;
     display: grid;
     position: relative;
     justify-content: center;
     background-color: blue;
-     right:139.3vw;
-     top:9.1vh;
-     width:49.8vw;
-     height:07.1vh;
+     right:138.3vw;
+     top:11.9vh;
+     height:07.13vh;
+     width:49.9vw;
+     border-bottom: 2px solid black;
+     
     }
     .statnames{
         justify-content: center;
@@ -27,18 +48,10 @@
         grid-column:auto;
           border-bottom:1px solid black;
         background-color: rgb(77, 15, 15);
-       
-        justify-items: center;
-        
-        
-         }
+       justify-items: center;
+        }
 
-
-         
-    
-
-
-    .txt {
+        .txt {
         background-color:turquoise;
         
         justify-content: center;
@@ -54,8 +67,8 @@
     position:relative;
        border:solid 1px black; 
      justify-content: center;
-     right:148.8vw;
-     bottom:-1.9vh;
+     right:189.4vw;
+     bottom:2.8vh;
      width:09.3vw;
      height:07vh;
     
