--- a/oblig/otherstuff.css
+++ b/oblig/otherstuff.css
@@ -1,28 +1,26 @@
-
-   /*Dmg output*/
-
-
-
-
-/*end off dmg out */
-
-/*dont know if in use */
-/* input{
-  position:fixed;
-  display: flex;
-  flex-wrap:wrap;
-} */.dropdown {
-  position: fixed;
-  display: inline-block;
-  }
+.Seals{
  
-.dropdown-content {
-  display:block;
-  width: 700px;
-  position:fixed;
-  background-color: #f9f9f9;
-}
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  position: relative;
+  bottom:11vh;
+  right:88vw;
+height:3.75vh;
+width:49.9vw;
+justify-content: center;
+font-size:3vh;
 
-.dropdown:hover .dropdown-content {
-  display: block;
+}
+.SealTag{
+  background-color: crimson;
+  display: grid;
+  position:static
+  
+ 
+}
+.Seal{
+  display: grid;
+  background-color: crimson;
+  position:static
+
 }
