--- a/oblig/othervari.css
+++ b/oblig/othervari.css
@@ -1,11 +1,11 @@
 .theninja{ /*ninja ID and ninjaName Tags container */
   display: grid;
   position: relative;
-  left:vw;
-  bottom:25.83vh;
-  width:49.7vw;
-  height:10vh;
-  border: 2px solid black;
+  left:1vw;
+  bottom:28.7vh;
+  width:49.9vw;
+  height:7.5vh;
+  
 }
 /*ninja ID and ninjaName Tags container end  */
 .ID { /*ninja ID*/
@@ -24,9 +24,11 @@ border-bottom: 1px solid black;
   background-color: blueviolet;
   display: grid;
   position: relative;
-bottom:26.955vh;
+bottom:45.18vh;
+left:0.7vw;
 width:9.4vw;
-height:10vh;
+height:7.5vh;
+
 }
 .Cost{
 display: grid;
@@ -56,35 +58,38 @@ font-size:2vh;
 .Penalty-containers {
   display: grid;
   position: relative;
-  height:10.5vh;
-  bottom:36vh;
-}
+  height:7.5vh;
+  left:1vw;
+  bottom:58vh;
+  font-size:3vh;
+  width:39.4vw;}
  .is-off{
 display: grid;
 position: static;
 background-color: aquamarine;
-
+justify-content: center;
+border:1px solid black;
  }
  .Y-N{
 display: grid;
 position: static;
 background-color: aquamarine;
-
-
+justify-content: center;
+border:1px solid black;
  }
  .offpos{
 display:grid;
 position: static;
 background-color: aquamarine;
-
-
+justify-content: center;
+border:1px solid black;
  }
  .Pen{
    display: grid;
    position: static;
    background-color: aquamarine;
-   bottom:39.9vw;
-
+   justify-content: center;
+   border:1px solid black;
 
  }
 
@@ -96,10 +101,10 @@ background-color: aquamarine;
 position: relative;
 background-color: brown;
 justify-content: center;
-right:0vw;
-bottom:33.4vh;
+left:1vw;
+bottom:36.4vh;
 width:39.4vw;
-height: 12vh;
+height: 7.5vh;
 }
 /*posstion tag end */
 /* seal tag box needs to be helped  */
@@ -108,10 +113,10 @@ height: 12vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
   position: relative;
- bottom:15.34vh;
-  right:89.31vw;
+ bottom:18.54vh;
+  right:88.31vw;
 height:4.5vh;
-width:49.85vw;
+width:49.9vw;
 justify-content: center;
 font-size:3vh;
 border: 1px solid black;
@@ -137,10 +142,10 @@ border: 1px solid black;
 .BL-containers{
   display: grid;
   position: relative;
-  right:89.39vw;
-  bottom:35.8vh;
-  height:20vh;
- width:40;
+  right:87.39vw;
+  bottom:38.72vh;
+  height:18.2vh;
+  width:39.4vw;
   
  
 }
@@ -149,6 +154,7 @@ border: 1px solid black;
     position: static;
     font-size:2vh;
    border-top: 2px solid black;
+   border-bottom: 2px solid black;
     background-color: crimson;
     width:19.6vw;
   }
@@ -182,11 +188,11 @@ border: 1px solid black;
 .fq {
   display: grid;
   position:relative;
-  bottom:30vh;
-  right:150vw;
-  width:10.6vw;
-  border:1px solid black;
-  height:14vh;
+  bottom:45.2vh;
+  right:147.7vw;
+  width:9.4vw;
+  
+  height:10vh;
 }
 .Fixed1{
   display: grid;
